# terra-scientific-pipelines-service

./: .dockstore.yml  .gitignore  AGENTS.md  CLAUDE.md  CNAME  README.md  build.gradle  foundation.yaml  pull_request_template.md  settings.gradle
.github/: dependabot.yml
buildSrc/: build.gradle
client/: artifactory.gradle  build.gradle  java-client.gradle  openapi.gradle  python-client.gradle  swagger.gradle
common/: api-docs-anyvalue.yml  openapi.yml
docs/: array_imputation.MD  low_pass_imputation.MD  pipeline-config-yaml-refactor-plan.MD  pipeline-config-yaml-refactor-plan.md 
notification-templates/: README.md  job_failed.html  job_succeeded.html  user_quota_change_notification.html
python-client/: build.gradle  teaspoons-client.gradle
rawls-client/: build.gradle  openapi.gradle  swagger.gradle
scripts/: postgres-init.sql  write-config.sh
service/: IMPLEMENTATION_NOTES.md  build.gradle  generators.gradle  (+2 more)
teaspoons-cli/: .env  .gitignore  README.md  auth.py  build.gradle  config.py  pyproject.toml  requirements.txt  teaspoons  teaspoons-client.gradle  tsps
teaspoons-cli/teaspoons/: auth.py  auth_helper.py  cli.py  client.py  config.py  log.py  teaspoons  utils.py
teaspoons-cli/teaspoons/commands/: auth.py  auth_commands.py  pipelines.py  pipelines_commands.py
teaspoons-cli/teaspoons/logic/: auth_logic.py  pipelines_logic.py
teaspoons-cli/tests/: .env.test  test_cli.py  test_utils.py
teaspoons-cli/tests/commands/: test_auth_commands.py  test_pipelines_commands.py
teaspoons-cli/tests/logic/: test_auth_logic.py  test_pipelines_logic.py
(+839 files in other folders)
